# omni-hal_stm32

./: CMakeLists.txt  README.md
stm32cube/: CMakeLists.txt
stm32cube/common/include/: stm32_hal.h  stm32_ll_adc.h  stm32_ll_bus.h  stm32_ll_gpio.h  stm32_ll_utils.h
stm32cube/stm32f1xx/: device.clayer.yml  stm32f1xx_hal_conf.h
stm32cube/stm32f1xx/device/src/arm/: stm32f103xb_flash.sct
stm32cube/stm32f1xx/device/src/gcc/: startup_stm32f103xb.s  startup_stm32f103xe.s
stm32cube/stm32f4xx/: CMakeLists.txt  device.clayer.yml  stm32f4xx_hal_conf.h
stm32cube/stm32f4xx/device/src/: startup_stm32f4xx.c
stm32cube/stm32f4xx/device/src/arm/: stm32f407xg_flash.sct  stm32f407xg_ram.sct
stm32cube/stm32f4xx/device/src/gcc/: startup_stm32f407xx.s  stm32f407xg_flash.ld
stm32cube/stm32g4xx/: device.clayer.yml
stm32cube/stm32g4xx/device/src/arm/: stm32g474xe_flash.sct
stm32cube/stm32h7xx/: device.clayer.yml  stm32h7xx_hal_conf.h
stm32cube/stm32h7xx/device/src/: startup_stm32h743xx.c
stm32cube/stm32h7xx/device/src/arm/: stm32h743xx_flash.sct  stm32h743xx_ram.sct  stm32h750xb_flash.sct
